# finance-assist

./: .gitignore
.codex/agents/: README.md  backend-engineer.md  frontend-engineer.md  llm-engineer.md  market-data-engineer.md  qa-engineer.md  reviewer.md
backend/: pyproject.toml
backend/app/: bootstrap.py  config.py  main.py
backend/app/market_data/: __init__.py  cache.py  service.py  simulator.py  types.py
backend/app/routes/: __init__.py  stream.py
backend/tests/: conftest.py  test_health.py  test_market_data.py  test_stream.py
notes/: 00-project-overview.md  01-feature-map.md  02-system-structure.md  03-data-flows.md
notes/checkpoints/: 01-foundation.md  02-market-data-and-sse.md
planning/: 2026-04-16-foundation-checkpoint-01-plan.md  2026-04-16-market-data-sse-design.md  2026-04-16-market-data-sse-plan.md  REVIEW.md
