[project]
name = "finance-assist-backend"
version = "0.1.0"
description = "Minimal backend foundation for finance-assist"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]
